@@ -54,12 +54,17 @@
       
     <h3>Latest release</h3>
       <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.22/deskbar-applet-2.22.3.tar.gz"
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.22/deskbar-applet-2.22.3.1.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.22.3</a></div>
+      Deskbar-Applet 2.22.3.1</a></div>
 
     <h3>Past releases</h3>
+      <div class="download">
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.22/deskbar-applet-2.22.3.tar.gz">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Deskbar-Applet 2.22.3</a></div>
+    
       <div class="download">
       <a href="http://download.gnome.org/sources/deskbar-applet/2.22/deskbar-applet-2.22.2.1.tar.gz">
       <img src="./images/package-x-generic.png" alt="source package" />
