@@ -46,7 +46,7 @@
         webeyes and <a href="http://developer.imendio.com/wiki/GNOME_Launch_Box">GNOME Launch Box</a> and the Alt-f2
         dialog.</p>
       
-      <h2>Features highlights</h2>
+      <h2>Feature highlights</h2>
       <h3>Generic</h3>
 		<ul>
 			<li>Sits in the panel waiting for input</li>
@@ -86,6 +86,17 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+		
+		<h3>August 3, 2008</h3>
+		  <b>Stable</b> version 2.22.3.1 released.<br />
+		  This release fixes a bug that appeared because of the new version of delicious.com.
+		  <br /><br />
+		  Changes since 2.22.3:
+		  <ul>
+		  	<li>desklicious.py: Adjusted url to RSS feeds. Check if content is formatted properly before parsing it.
+		  	Fixes <a href="http://bugzilla.gnome.org/show_bug.cgi?id=544645">bug #544645</a></li>
+		  </ul>
+		  <a href="download.html">Download it</a>
 
 		<h3>July 21, 2008</h3>
 		  <b>Unstable</b> version 2.23.5 released.<br />
