@@ -1,3 +1,9 @@
+2008-08-03	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.22.3.1 release
+
 2008-07-21	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
